--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <!--Sets the title, links the stylesheet and sets the favicon.-->
     <title>Stranda Treningspark</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/Tdeey/test/css/style.css">
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
 </head>
 <body>
