--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
     <!--Sets the title, links the stylesheet and sets the favicon.-->
     <title>Stranda Treningspark</title>
     <link rel="stylesheet" href="/Test/css/style.css">
-    <link rel="icon" type="image/x-icon" href="Test/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/Test/img/favicon.ico">
 </head>
 <body>
 <!--Creates the navigationbar and sets the logo, then makes different section (Forside, Treningsapparater, Hvor Befinner Oss?, Kontakt oss!)-->
     <div class="navbar">
-        <a href="Test/index.html">
-            <img class="img-main" id="l1" src="Test/img/Stranda Treningspark.png" alt="Logo">
+        <a href="/Test/index.html">
+            <img class="img-main" id="l1" src="/Test/img/Stranda Treningspark.png" alt="Logo">
           </a>
-        <a href="Test/index.html">Forside</a>
+        <a href="/Test/index.html">Forside</a>
         <div class="main-two">
-        <a href="Test/html/Treningsapparater.html">Treningsapparater</a>
+        <a href="/Test/html/Treningsapparater.html">Treningsapparater</a>
       </div>
-      <a href="Test/html/kart.html">Hvor befinner vi oss?  </a>
-      <a href="Test/html/kontakt.html">Kontakt oss!</a>
+      <a href="/Test/html/kart.html">Hvor befinner vi oss?  </a>
+      <a href="/Test/html/kontakt.html">Kontakt oss!</a>
       <button class="toggle-button">Toggle Dark Mode</button>
-      <script src="Test/script.js"></script>
+      <script src="/Test/script.js"></script>
       </div>
       
 
