--- a/html/kart.html
+++ b/html/kart.html
@@ -10,23 +10,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--Sets the title, links the stylesheet and sets the favicon.-->
     <title>Stranda Treningspark</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/Test/css/style.css">
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
 </head>
 <body>
 <!--Creates the navigationbar and sets the logo, then makes different section (Forside, Treningsapparater, Hvor Befinner Oss?, Kontakt oss!)-->
   <div class="navbar">
-    <a href="/index.html">
-        <img class="img-main" id="l1" src="/img/Stranda Treningspark.png" alt="">
+    <a href="/Test/index.html">
+        <img class="img-main" id="l1" src="/Test/img/Stranda Treningspark.png" alt="">
       </a>
-    <a href="/index.html">Forside</a>
+    <a href="/Test/index.html">Forside</a>
     <div class="main-two">
-    <a href="/html/Treningsapparater.html">Treningsapparater</a>
+    <a href="/Test/html/Treningsapparater.html">Treningsapparater</a>
   </div>
-  <a href="/html/kart.html">Hvor befinner vi oss?  </a>
-  <a href="/html/kontakt.html">Kontakt oss!</a>
+  <a href="/Test/html/kart.html">Hvor befinner vi oss?  </a>
+  <a href="/Test/html/kontakt.html">Kontakt oss!</a>
   <button class="toggle-button">Toggle Dark Mode</button>
-  <script src="/script.js"></script>
+  <script src="/Test/script.js"></script>
   </div>
 
 <!--Makes a div with heading 1 and heading 2.-->
