--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           </a>
         <a href="/Test/index.html">Forside</a>
         <div class="main-two">
-        <a href="/html/Treningsapparater.html">Treningsapparater</a>
+        <a href="/Test/html/Treningsapparater.html">Treningsapparater</a>
       </div>
       <a href="/Test/html/kart.html">Hvor befinner vi oss?  </a>
       <a href="/Test/html/kontakt.html">Kontakt oss!</a>
@@ -111,10 +111,10 @@
                   <div class="col-sm-6 col-md-3 item">
                       <h3>Forside</h3>
                       <ul>
-                        <li><a href="/html/Treningsapparater.html">Treningsapparater</a></li>
-                          <li><a href="/html/kart.html">Hvor befinner vi oss?</a></li>
-                          <li><a href="/html/kontakt.html">Kontakt oss!</a></li>
-                          <li><a href="/html/kilder.html">Kilder</a></li>
+                        <li><a href="/Test/html/Treningsapparater.html">Treningsapparater</a></li>
+                          <li><a href="/Test/html/kart.html">Hvor befinner vi oss?</a></li>
+                          <li><a href="/Test/html/kontakt.html">Kontakt oss!</a></li>
+                          <li><a href="/Test/html/kilder.html">Kilder</a></li>
                       </ul>
                   </div>
                   <div class="col-md-6 item text">
@@ -125,7 +125,7 @@
 
 <!--This is the logo on the footer element.-->
 <div class="logo-footer">
-<img src="/img/Stranda Treningspark.png" alt=""
+<img src="/Test/img/Stranda Treningspark.png" alt=""
 width="400px"
 height="100px">
 </div>
