--- a/html/kart.html
+++ b/html/kart.html
@@ -11,7 +11,7 @@
   <!--Sets the title, links the stylesheet and sets the favicon.-->
     <title>Stranda Treningspark</title>
     <link rel="stylesheet" href="/Test/css/style.css">
-    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/Test/img/favicon.ico">
 </head>
 <body>
 <!--Creates the navigationbar and sets the logo, then makes different section (Forside, Treningsapparater, Hvor Befinner Oss?, Kontakt oss!)-->
