--- a/html/kilder.html
+++ b/html/kilder.html
@@ -9,8 +9,8 @@
             <!--It tells the browser to scale the webpage based on the device your are using.-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <!--Sets the title, links the stylesheet and sets the favicon.-->
-    <link rel="stylesheet" href="/css/kilder-style.css">
-    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+    <link rel="stylesheet" href="/Test/css/kilder-style.css">
+    <link rel="icon" type="image/x-icon" href="/Test/img/favicon.ico">
     <title>Stranda Treningspark</title>
 </head>
 <body>
