--- a/html/Treningsapparater.html
+++ b/html/Treningsapparater.html
@@ -38,7 +38,7 @@
 <!--This is the select exercise box, it makes you select a exercise then changes depending on your answer-->
       <select id="exercise-select">
         <option value="default">--Velg an Øvelse--</option>
-        <option value="chest-press">Byrst Press</option>
+        <option value="chest-press">Bryst Press</option>
         <option value="shoulder-press">Skulder Press</option>
         <option value="pull-down">Nedtrekk</option>
       </select>
