--- a/html/kontakt.html
+++ b/html/kontakt.html
@@ -10,23 +10,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Sets the title, links the stylesheet and sets the favicon.-->
     <title>Stranda Treningspark</title>
-    <link rel="stylesheet" href="/Test/css/kontakt-skjema.css">
-    <link rel="icon" type="image/x-icon" href="/Test/img/favicon.ico">
+    <link rel="stylesheet" href="/css/kontakt-skjema.css">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
 </head>
 <body>
   <!--Creates the navigationbar and sets the logo, then makes different section (Forside, Treningsapparater, Hvor Befinner Oss?, Kontakt oss!)-->
   <div class="navbar">
-    <a href="/Test/index.html">
-        <img class="img-main" id="l1" src="/Test/img/Stranda Treningspark.png" alt="">
+    <a href="/index.html">
+        <img class="img-main" id="l1" src="/img/Stranda Treningspark.png" alt="Stranda Logo">
       </a>
-    <a href="/Test/index.html">Forside</a>
+    <a href="/index.html">Forside</a>
     <div class="main-two">
-    <a href="/Test/html/Treningsapparater.html">Treningsapparater</a>
+    <a href="/html/Treningsapparater.html">Treningsapparater</a>
   </div>
-  <a href="/Test/html/kart.html">Hvor befinner vi oss?  </a>
-  <a href="/Test/html/kontakt.html">Kontakt oss!</a>
-  <button class="toggle-button">Toggle Dark Mode</button>
-  <script src="/Test/script.js"></script>
+  <a href="/html/kart.html">Hvor befinner vi oss?  </a>
+  <a href="/html/kontakt.html">Kontakt oss!</a>
+  <button class="toggle-button">Toggle Theme</button>
+  <script src="/script.js"></script>
   </div>
 <!--Heading 1 med kontakt, så en form med navn, email og melding som er required.-->
 <h1>Kontakt oss!</h1>
@@ -41,6 +41,44 @@
         <br>
         <input type="submit" value="Send inn!">
       </form>
+
+<!--This is the footer element.-->
+<body>
+  <div class="footer-dark">
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 col-md-3 item">
+                    <h3>Forside</h3>
+                    <ul>
+                      <li><a href="/html/Treningsapparater.html">Treningsapparater</a></li>
+                        <li><a href="/html/kart.html">Hvor befinner vi oss?</a></li>
+                        <li><a href="/html/kontakt.html">Kontakt oss!</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-6 item text">
+                    <h3>Stranda Treningspark</h3>
+                    <p>Laget av Sander 1IMB</p>
+                </div>
+
+
+<!--This is the logo on the footer element.-->
+<div class="logo-footer">
+<img src="/img/Stranda Treningspark.png" alt="Stranda Logo"
+width="400px"
+height="100px">
+</div>
+
+
+              </div>
+              <p class="copyright">Sander © 2023</p>
+          </div>
+
+        <!--This is a extra element needed for the bootstrap icons to be able to work with the website.-->
+      </footer>
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 
 
 </body>
