--- a/Treningsapparater.html
+++ b/Treningsapparater.html
@@ -10,21 +10,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <!--Sets the title, links the stylesheet and sets the favicon.-->
     <title>Stranda Treningspark</title>
-    <link rel="stylesheet" href="/css/exercises-select.css">
-    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+    <link rel="stylesheet" href="/exercises-select.css">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
 </head>
 <body>
   <!--Creates the navigationbar and sets the logo, then makes different section (Forside, Treningsapparater, Hvor Befinner Oss?, Kontakt oss!)-->
   <div class="navbar">
     <a href="/index.html">
-        <img class="img-main" id="l1" src="/img/Stranda Treningspark.png" alt="Stranda Logo">
+        <img class="img-main" id="l1" src="/Stranda Treningspark.png" alt="Stranda Logo">
       </a>
     <a href="/index.html">Forside</a>
     <div class="main-two">
-    <a href="/html/Treningsapparater.html">Treningsapparater</a>
+    <a href="/Treningsapparater.html">Treningsapparater</a>
   </div>
-  <a href="/html/kart.html">Hvor befinner vi oss?  </a>
-  <a href="/html/kontakt.html">Kontakt oss!</a>
+  <a href="/kart.html">Hvor befinner vi oss?  </a>
+  <a href="/kontakt.html">Kontakt oss!</a>
   <button class="toggle-button">Toggle Theme</button>
   <script src="/script.js"></script>
   </div>
@@ -84,9 +84,9 @@
                   <div class="col-sm-6 col-md-3 item">
                       <h3>Forside</h3>
                       <ul>
-                        <li><a href="/html/Treningsapparater.html">Treningsapparater</a></li>
-                          <li><a href="/html/kart.html">Hvor befinner vi oss?</a></li>
-                          <li><a href="/html/kontakt.html">Kontakt oss!</a></li>
+                        <li><a href="/Treningsapparater.html">Treningsapparater</a></li>
+                          <li><a href="/kart.html">Hvor befinner vi oss?</a></li>
+                          <li><a href="/kontakt.html">Kontakt oss!</a></li>
                       </ul>
                   </div>
                   <div class="col-md-6 item text">
@@ -97,7 +97,7 @@
 
 <!--This is the logo on the footer element.-->
 <div class="logo-footer">
-<img src="/img/Stranda Treningspark.png" alt="Stranda Logo"
+<img src="/Stranda Treningspark.png" alt="Stranda Logo"
 width="400px"
 height="100px">
 </div>
