--- a/html/kart.html
+++ b/html/kart.html
@@ -10,23 +10,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--Sets the title, links the stylesheet and sets the favicon.-->
     <title>Stranda Treningspark</title>
-    <link rel="stylesheet" href="/style.css">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="stylesheet" href="/Test/css/style.css">
+    <link rel="icon" type="image/x-icon" href="/Test/img/favicon.ico">
 </head>
 <body>
 <!--Creates the navigationbar and sets the logo, then makes different section (Forside, Treningsapparater, Hvor Befinner Oss?, Kontakt oss!)-->
   <div class="navbar">
-    <a href="/index.html">
-        <img class="img-main" id="l1" src="/Stranda Treningspark.png" alt="">
+    <a href="/Test/index.html">
+        <img class="img-main" id="l1" src="/Test/img/Stranda Treningspark.png" alt="">
       </a>
-    <a href="/index.html">Forside</a>
+    <a href="/Test/index.html">Forside</a>
     <div class="main-two">
-    <a href="/Treningsapparater.html">Treningsapparater</a>
+    <a href="/Test/html/Treningsapparater.html">Treningsapparater</a>
   </div>
-  <a href="/kart.html">Hvor befinner vi oss?  </a>
-  <a href="/kontakt.html">Kontakt oss!</a>
+  <a href="/Test/html/kart.html">Hvor befinner vi oss?  </a>
+  <a href="/Test/html/kontakt.html">Kontakt oss!</a>
   <button class="toggle-button">Toggle Theme</button>
-  <script src="/script.js"></script>
+  <script src="/Test/script.js"></script>
   </div>
 
 <!--Makes a div with heading 1 and heading 2.-->
@@ -46,9 +46,9 @@
                 <div class="col-sm-6 col-md-3 item">
                     <h3>Forside</h3>
                     <ul>
-                      <li><a href="/Treningsapparater.html">Treningsapparater</a></li>
-                        <li><a href="/kart.html">Hvor befinner vi oss?</a></li>
-                        <li><a href="/kontakt.html">Kontakt oss!</a></li>
+                      <li><a href="/Test/html/Treningsapparater.html">Treningsapparater</a></li>
+                        <li><a href="/Test/html/kart.html">Hvor befinner vi oss?</a></li>
+                        <li><a href="/Test/html/kontakt.html">Kontakt oss!</a></li>
                     </ul>
                 </div>
                 <div class="col-md-6 item text">
@@ -59,7 +59,7 @@
 
 <!--This is the logo on the footer element.-->
 <div class="logo-footer">
-<img src="/Stranda Treningspark.png" alt="Stranda Logo"
+<img src="/Test/img/Stranda Treningspark.png" alt="Stranda Logo"
 width="400px"
 height="100px">
 </div>
