--- a/html/om-oss.html
+++ b/html/om-oss.html
@@ -31,11 +31,14 @@
 
 <!--Makes a div with heading 1 and heading 2.-->
       <div class="container">
-        <h1>Hvor befinner Treningsparken seg?</h1>
-        <h2>Treningsparken befinner seg rett ved fotballbanen som ligger rett foran Porsnes Videregående Skole</h2>
+        <h1>Om Stranda Treningspark</h1>
+        <h2>Stranda Treningspark i Halden ligger praktisk til rett ved siden av fotballbanen og bare to minutter unna Porsnes Videregående Skole. </h2>
+        <h2>Parken er utstyrt med et bredt utvalg av treningsapparater, som gir mulighet for å trene hver enkelt muskelgruppe.</h2>
+        <h2> Treningsapparatene som finnes i parken kan inkludere alt fra pull-up bars, brystpress, skulderpress, beinpress, og mange flere.</h2>
+        <h2>Alle apparater er utformet for å gi en fullstendig treningsopplevelse og er tilgjengelige for bruk av alle som ønsker å trene.</h2>
+        <h2>Det faktum at parken er åpen for alle og gratis å bruke, gjør det til et flott alternativ for de som ønsker å trene utendørs og ikke vil betale for et treningssenter eller treningsprogram.</h2>
+        <h2>Parken er også ideell for de som ønsker å komme i form eller forbedre sin fysiske form. Totalt sett er Stranda Treningspark en flott ressurs for lokalsamfunnet. Det gir en gratis og tilgjengelig mulighet for lokalbefolkningen å trene, og er et flott sted å tilbringe tid utendørs og opprettholde en sunn livsstil.</h2>
       </div>
-<!--Google Maps iframe to show the Google Map-->
-      <div class="mapouter"><div class="gmap_canvas"><iframe width="749" height="669" id="gmap_canvas" alt="Google Maps" src="https://maps.google.com/maps?q=Torgny%20Segerstedts%20Gate%203,%201772%20Halden&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><br><style>.mapouter{position:relative;text-align:right;height:669px;width:749px;}</style><style>.gmap_canvas {overflow:hidden;background:none!important;height:669px;width:749px;}</style></div></div>
 
 <!--This is the footer element.-->
 <body>
@@ -46,14 +49,14 @@
                 <div class="col-sm-6 col-md-3 item">
                     <h3>Forside</h3>
                     <ul>
-                      <li><a href="/html/Treningsapparater.html">Treningsapparater</a></li>
-                      <li><a href="/html/kart.html">Hvor befinner vi oss?</a></li>
-                      <li><a href="/html/kontakt.html">Kontakt oss</a></li>
-                      <li><a href="om-oss.html">Om Oss</a></li>
-                      <li><a href="https://www.halden.kommune.no/">Halden Kommune</a></li>
+                        <li><a href="/html/Treningsapparater.html">Treningsapparater</a></li>
+                          <li><a href="/html/kart.html">Hvor befinner vi oss?</a></li>
+                          <li><a href="/html/kontakt.html">Kontakt oss</a></li>
+                          <li><a href="om-oss.html">Om Oss</a></li>
+                          <li><a href="https://www.halden.kommune.no/">Halden Kommune</a></li>
                     </ul>
                 </div>
-                <div class="col-md-6 item text">
+                <div class="col-md-7 item text">
                     <h3>Stranda Treningspark</h3>
                     <p>Laget av Sander 1IMB</p>
                 </div>
