--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <!--Sets the title, links the stylesheet and sets the favicon.-->
     <title>Stranda Treningspark</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+    <link rel="stylesheet" href="/Test/css/style.css">
+    <link rel="icon" type="image/x-icon" href="/Test/img/favicon.ico">
 </head>
 <body>
 <!--Creates the navigationbar and sets the logo, then makes different section (Forside, Treningsapparater, Hvor Befinner Oss?, Kontakt oss!)-->
     <div class="navbar">
-        <a href="/index.html">
-            <img class="img-main" id="l1" src="/img/Stranda Treningspark.png" alt="Stranda Logo">
+        <a href="/Test/index.html">
+            <img class="img-main" id="l1" src="/Test/img/Stranda Treningspark.png" alt="Stranda Logo">
           </a>
-        <a href="/index.html">Forside</a>
+        <a href="/Test/index.html">Forside</a>
         <div class="main-two">
         <a href="/html/Treningsapparater.html">Treningsapparater</a>
       </div>
-      <a href="/html/kart.html">Hvor befinner vi oss?  </a>
-      <a href="/html/kontakt.html">Kontakt oss!</a>
-      <a href="/html/om-oss.html">Om oss!</a>
+      <a href="/Test/html/kart.html">Hvor befinner vi oss?  </a>
+      <a href="/Test/html/kontakt.html">Kontakt oss!</a>
+      <a href="/Test/html/om-oss.html">Om oss!</a>
       <button class="toggle-button">Toggle Theme</button>
-      <script src="/script.js"></script>
+      <script src="/Test/script.js"></script>
       </div>
       
 
@@ -110,10 +110,10 @@
                   <div class="col-sm-6 col-md-3 item">
                       <h3>Forside</h3>
                       <ul>
-                        <li><a href="/html/Treningsapparater.html">Treningsapparater</a></li>
-                        <li><a href="/html/kart.html">Hvor befinner vi oss?</a></li>
-                        <li><a href="/html/kontakt.html">Kontakt oss</a></li>
-                        <li><a href="om-oss.html">Om Oss</a></li>
+                        <li><a href="/Test/html/Treningsapparater.html">Treningsapparater</a></li>
+                        <li><a href="/Test/html/kart.html">Hvor befinner vi oss?</a></li>
+                        <li><a href="/Test/html/kontakt.html">Kontakt oss</a></li>
+                        <li><a href="/Test/html/om-oss.html">Om Oss</a></li>
                         <li><a href="https://www.halden.kommune.no/">Halden Kommune</a></li>
                       </ul>
                       <br>
@@ -126,7 +126,7 @@
 
 <!--This is the logo on the footer element.-->
 <div class="logo-footer">
-<img src="/img/Stranda Treningspark.png" alt="Stranda Logo"
+<img src="/Test/img/Stranda Treningspark.png" alt="Stranda Logo"
 width="400px"
 height="100px">
 </div>
