--- a/html/kart.html
+++ b/html/kart.html
@@ -25,6 +25,7 @@
   </div>
   <a href="/Test/html/kart.html">Hvor befinner vi oss?  </a>
   <a href="/Test/html/kontakt.html">Kontakt oss!</a>
+  <a href="/Test/html/om-oss.html">Om oss!</a>
   <button class="toggle-button">Toggle Theme</button>
   <script src="/Test/script.js"></script>
   </div>
