--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           </a>
         <a href="/Test/index.html">Forside</a>
         <div class="main-two">
-        <a href="/html/Treningsapparater.html">Treningsapparater</a>
+        <a href="/Test/html/Treningsapparater.html">Treningsapparater</a>
       </div>
       <a href="/Test/html/kart.html">Hvor befinner vi oss?  </a>
       <a href="/Test/html/kontakt.html">Kontakt oss!</a>
