--- a/index.html
+++ b/index.html
@@ -142,7 +142,19 @@ height="100px">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 
-
+  <div id="popup" style="display: block; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.5); z-index: 9999;">
+    <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: white; padding: 20px; border-radius: 10px;">
+      <h1>Welcome to My Website!</h1>
+      <p>Thanks for visiting! We're so glad you're here. Feel free to explore and let us know if you have any questions.</p>
+      <button onclick="closePopup()">Close</button>
+    </div>
+  </div>
+  
+  <script>
+  function closePopup() {
+    document.getElementById("popup").style.display = "none";
+  }
+  </script>
 
 </body>
 </html>
