--- a/index.html
+++ b/index.html
@@ -144,8 +144,9 @@ height="100px">
 
   <div id="popup-overlay">
     <div id="popup">
-      <h1>Welcome to My Website!</h1>
-      <p>Thanks for visiting! We're so glad you're here. Feel free to explore and let us know if you have any questions.</p>
+      <h1>Velkommen til Stranda Treningspark!</h1>
+      <p>Takk for besøket! Vi er så glade for at du er her. Føl deg fri til å utforske og gi oss beskjed hvis du har noen spørsmål.</p>
+      <p>Laget av Sander 1IMB</p>
       <button id="close-popup">Close</button>
     </div>
   </div>
