--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ height="100px">
       <h1>Velkommen til Stranda Treningspark!</h1>
       <p>Takk for besøket! Vi er så glade for at du er her. Føl deg fri til å utforske og gi oss beskjed hvis du har noen spørsmål.</p>
       <p>Laget av Sander 1IMB</p>
-      <button id="close-popup">Close</button>
+      <button id="close-popup">Lukk</button>
     </div>
   </div>
   
