--- a/html/kontakt.html
+++ b/html/kontakt.html
@@ -26,7 +26,7 @@
   <a href="/Test/html/kart.html">Hvor befinner vi oss?  </a>
   <a href="/Test/html/kontakt.html">Kontakt oss!</a>
   <a href="/Test/html/om-oss.html">Om oss!</a>
-  <button class="toggle-button">Toggle Theme</button>
+  <button class="toggle-button">Bytt Tema</button>
   <script src="/Test/script.js"></script>
   </div>
 <!--Heading 1 med kontakt, så en form med navn, email og melding som er required.-->
