--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@ height="100px">
   <div id="popup-overlay">
     <div id="popup">
       <h1>Velkommen til Stranda Treningspark!</h1>
-      <p>Takk for besøket! Vi er så glade for at du er her. Føl deg fri til å utforske og gi oss beskjed hvis du har noen spørsmål.</p>
-      <p>Laget av Sander 1IMB</p>
+      <h2>Takk for besøket! Vi er så glade for at du er her. Føl deg fri til å utforske og gi oss beskjed hvis du har noen spørsmål.</h2>
+      <h2>Laget av Sander 1IMB</h2>
       <button id="close-popup">Lukk</button>
     </div>
   </div>
