--- a/html/Treningsapparater.html
+++ b/html/Treningsapparater.html
@@ -59,15 +59,15 @@
           
           switch (selectedValue) {
             case "chest-press":
-              display.innerHTML = "To perform a Chest Press, lie down on a flat bench with a weight in each hand. Lower the weights to the sides of your chest, then press them back up to the starting position.";
+              display.innerHTML = "For å utføre en brystpress, legg deg intil ryggstøtten Senk vektene til sidene av brystet ditt, og press deretter opp igjen til startposisjonen.";
               image.src = "/Test/img/Chest Press.gif";
               break;
             case "shoulder-press":
-              display.innerHTML = "To perform a Shoulder Press, stand with a weight in each hand at shoulder level. Push the weights up above your head, then lower them back down to the starting position.";
+              display.innerHTML = "For å utføre en skulderpress, hold på håndtakene og Skyv vektene opp over hodet ditt, og senk deretter ned igjen til startposisjonen.";
               image.src = "/Test/img/Shoulder Press.gif";
               break;
             case "pull-down":
-              display.innerHTML = "To perform a Pull Down, sit at a pull-down machine with a wide bar attached to the cable. Grasp the bar with a wide grip and pull it down towards your chest, then release it back to the starting position.";
+              display.innerHTML = "For å utføre en nedtrekk, sett deg ved en nedtrekksmaskin, grip stangen med et bredt grep og trekk den ned mot brystet ditt, og slipp deretter tilbake til startposisjonen.";
               image.src = "/Test/img/Nedtrekk.gif";
               break;
             default:
